# Data-science-Portfolio

./: .gitignore  PROFILE_README.md  README.md  RUNNING.md
crypto-backtest/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
crypto-backtest/config/: strategy.yaml
crypto-backtest/data/: README.md
crypto-backtest/src/backtest/: __init__.py  cli.py  demo.py  indicators.py  performance.py  scale_pipeline.py  validation.py
crypto-backtest/tests/: test_demo.py  test_indicators.py  test_performance.py  test_validation.py
eo-explorer-app/: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
eo-explorer-app/.streamlit/: config.toml
eo-explorer-app/app/: __init__.py  main.py  render.py  requirements.txt  stac.py
eo-explorer-app/notebooks/: 01_walkthrough.ipynb
eo-explorer-app/tests/: test_smoke.py
eo-monitor/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
eo-monitor/.github/workflows/: ci.yml
eo-monitor/notebooks/: 01_walkthrough.ipynb
eo-monitor/src/eo_monitor/: __init__.py  anomaly.py  catalog.py  cli.py  config.py  cube.py  demo.py  indices.py
eo-monitor/tests/: test_anomaly.py  test_config.py  test_demo.py  test_fixtures.py  test_indices.py
geoai-segmentation/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml
geoai-segmentation/.github/workflows/: ci.yml
geoai-segmentation/conf/: config.yaml
geoai-segmentation/conf/model/: unet.yaml
geoai-segmentation/notebooks/: 01_walkthrough.ipynb
geoai-segmentation/scripts/: prepare_data.py  rasterize_spacenet.py
geoai-segmentation/src/geoseg/: __init__.py  datamodule.py  evaluate.py  infer.py  metrics.py  model.py  tiling.py  train.py
geoai-segmentation/tests/: test_datamodule.py  test_metrics.py  test_tiling.py
log-anomaly/: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
log-anomaly/config/: hdfs.yaml
log-anomaly/notebooks/: 01_walkthrough.ipynb
log-anomaly/src/loganomaly/: __init__.py  cli.py  demo.py  detect.py  evaluate.py  features.py  spark_pipeline.py
log-anomaly/tests/: test_demo.py  test_detect.py  test_evaluate.py  test_features.py  test_mahalanobis.py  test_templating.py
non-spatial/01-data-engineering-pipeline/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
non-spatial/01-data-engineering-pipeline/app/: dashboard.py
non-spatial/01-data-engineering-pipeline/config/: config.yaml
non-spatial/01-data-engineering-pipeline/terraform/: README.md
non-spatial/01-data-engineering-pipeline/tests/: test_demo.py  test_ingest.py  test_transform.py  test_validate.py
non-spatial/01-data-engineering-pipeline/transform/: dbt_project.yml  packages.yml  profiles.example.yml
non-spatial/02-mlops-pipeline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
non-spatial/02-mlops-pipeline/azure/: README.md  endpoint.yml
non-spatial/02-mlops-pipeline/config/: config.yaml
non-spatial/02-mlops-pipeline/tests/: test_demo.py  test_drift.py  test_features.py  test_metrics.py  test_model.py
non-spatial/03-streaming-pipeline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
non-spatial/03-streaming-pipeline/app/: dashboard.py
non-spatial/03-streaming-pipeline/azure/: README.md  eventhubs.bicep
non-spatial/03-streaming-pipeline/config/: config.yaml
non-spatial/03-streaming-pipeline/tests/: test_alerts.py  test_aqi.py  test_demo.py  test_windows.py
non-spatial/04-ml-web-app/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
non-spatial/04-ml-web-app/app/: requirements.txt  streamlit_app.py
non-spatial/04-ml-web-app/config/: config.yaml
non-spatial/04-ml-web-app/tests/: test_data.py  test_demo.py  test_metrics.py  test_model.py  test_recommend.py
non-spatial/05-focused-ml-project/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
non-spatial/05-focused-ml-project/app/: requirements.txt  streamlit_app.py
non-spatial/05-focused-ml-project/config/: config.yaml
non-spatial/als-recommender/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
non-spatial/clickstream-pipeline/: USAGE.md  pyproject.toml  requirements.txt
non-spatial/dbt-modern-stack/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml
non-spatial/graph-analysis/: USAGE.md  pyproject.toml
sentiment-scale/: Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml
sentiment-scale/config/: reddit.yaml
sentiment-scale/tests/: test_classify.py  test_clean.py  test_demo.py  test_lexicon.py  test_topics.py  test_uncertainty.py
spatial/01-segment-geospatial/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial/02-earth-engine-timeseries/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial/03-torchgeo-landcover/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial/04-leafmap-dashboard/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial/05-change-detection/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial/disturbance-detection/: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
spatial/spatial-hotspots/: Dockerfile  README.md  USAGE.md  pixi.toml  pyproject.toml
tlc-analytics/: Dockerfile  Makefile  README.md  USAGE.md  pixi.toml  pyproject.toml  requirements.txt
tlc-analytics/config/: tlc.yaml
tlc-analytics/notebooks/: 01_walkthrough.ipynb
tlc-analytics/tests/: test_marts.py  test_partitions.py
(+463 files in other folders)
