[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-monitor"
version = "0.1.0"
description = "Config-driven Sentinel-2 vegetation/moisture anomaly monitoring from a STAC catalogue to Cloud-Optimised GeoTIFFs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["sentinel-2", "stac", "remote-sensing", "drought", "ndvi", "anomaly", "cog", "xarray"]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "odc-stac>=0.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "dask>=2024.1",
    "numpy>=1.26",
    "spyndex>=0.6",
    "rio-cogeo>=5.0",
    "rasterio>=1.3",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
eo-monitor = "eo_monitor.cli:app"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/eo-monitor"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/eo_monitor"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["eo_monitor"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/eo_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
