[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoai-segmentation"
version = "0.1.0"
description = "Reproducible deep-learning semantic segmentation for Earth-observation imagery."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
requires-python = ">=3.10,<3.13"
keywords = ["geospatial", "segmentation", "deep-learning", "pytorch", "torchgeo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies. Mirrored in pixi.toml (conda-forge) and requirements.txt.
dependencies = [
  "numpy",
  "torch",
  "torchvision",
  "pytorch-lightning",
  "torchgeo",
  "segmentation-models-pytorch",
  "rasterio",
  "rioxarray",
  "albumentations",
  "hydra-core",
  "omegaconf",
  "mlflow",
  "typer",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
]

[project.scripts]
geoseg-train = "geoseg.train:main"
geoseg-infer = "geoseg.infer:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/geoai-segmentation"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/geoseg"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
