[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-anomaly"
version = "0.1.0"
description = "Unsupervised log anomaly detection: Drain-lite templating, event-count features, PCA / z-score detectors, with an optional Spark + IsolationForest pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["log-analysis", "anomaly-detection", "drain", "pca", "spark", "loghub", "observability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5", "pyarrow>=14.0", "scikit-learn>=1.3"]
viz = ["matplotlib>=3.7"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
loganomaly = "loganomaly.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/log-anomaly"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/loganomaly"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow X, W etc. (math conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
