[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Rain-day prediction from notebook to a monitored service: pure-numpy ML + PSI/KS drift detection, with lazy MLflow tracking, a FastAPI service, and Evidently monitoring."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["mlops", "drift-detection", "psi", "model-monitoring", "mlflow", "fastapi", "weather"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
heavy = [
    "scikit-learn>=1.3",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "evidently>=0.4",
    "prefect>=2.16",
    "matplotlib>=3.8",
]
azure = [
    "azure-ai-ml>=1.12",
    "azureml-mlflow>=1.55",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mlpipe = "mlpipe.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/non-spatial/02-mlops-pipeline"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/mlpipe"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow X, R etc. (math / ML conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
