[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqstream"
version = "0.1.0"
description = "Real-time air-quality streaming & alerting for Cameroon cities: EPA AQI, tumbling windows, and a cooldown alert engine, with a pure-Python core and a guarded Kafka/Spark layer."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["air-quality", "aqi", "streaming", "kafka", "spark", "alerting", "pm2.5", "cameroon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
stream = [
    "requests>=2.31",
    "kafka-python>=2.0",
    "pyspark>=3.5",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "streamlit>=1.36",
]
azure = [
    "azure-eventhub>=5.11",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
aqstream = "aqstream.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/non-spatial/03-streaming-pipeline"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/aqstream"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow X, Z etc. (math conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
