[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "croprec"
version = "0.1.0"
description = "Crop recommender: soil & climate -> best crop for Cameroon smallholders, with a pure-numpy softmax classifier core, a deployable Streamlit app, and an optional scikit-learn RandomForest path."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["crop-recommendation", "machine-learning", "softmax", "streamlit", "agriculture", "cameroon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.32",
]
ml = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
croprec = "croprec.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/non-spatial/04-ml-web-app"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/croprec"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow X, W, Z etc. (math conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]
# The Streamlit entrypoint must bootstrap sys.path before importing croprec.
"app/streamlit_app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
