[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-modern-stack"
version = "0.1.0"
description = "A modern data stack worked example: batch ETL into a warehouse, layered dbt models with generic + singular tests, orchestration, and a pure-pandas data-quality core."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["modern-data-stack", "dbt", "duckdb", "data-quality", "etl", "warehouse", "analytics-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
dwh = "dwh.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/non-spatial/dbt-modern-stack"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/dwh"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow short upper-case names (DataFrames, keys)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
