[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-analysis"
version = "0.1.0"
description = "Large-scale graph analytics: PageRank, connected components, label propagation, and triangle counting, with a pure-numpy core and a Spark GraphFrames pipeline for scale."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["graph", "network-analysis", "pagerank", "community-detection", "triangle-counting", "spark", "graphframes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "pyspark>=3.5",
    "networkx>=3.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
bdgraph = "bdgraph.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/non-spatial/graph-analysis"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/bdgraph"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow A, W etc. (math conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
